--- a/Demo.ApiService/Demo.ApiService.csproj
+++ b/Demo.ApiService/Demo.ApiService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Demo.Core\Demo.Core.csproj" />
     <ProjectReference Include="..\Demo.ServiceDefaults\Demo.ServiceDefaults.csproj" />
   </ItemGroup>
 
