Authentication with EntraID implemented

--- a/Demo.Web/appsettings.json
+++ b/Demo.Web/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EntraID": {
+    "Authority": "https://login.microsoftonline.com/common",
+    "TenantId": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "ClientCertificates": [],
+    "CallbackPath": "/signin-oidc"
+  }
 }
