--- a/Demo.Web/Demo.Web.csproj
+++ b/Demo.Web/Demo.Web.csproj
@@ -1,20 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<UserSecretsId>1d201d28-4539-4a75-8d52-d7abb60bda53</UserSecretsId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="Files\zucchinis.jpg" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="Files\zucchinis.jpg" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Demo.Infrastructure\Demo.Infrastructure.csproj" />
-    <ProjectReference Include="..\Demo.ServiceDefaults\Demo.ServiceDefaults.csproj" />
-    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.3" />
-    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.3" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.5" />
+		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.5" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Identity.Web" Version="3.7.1" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Demo.Infrastructure\Demo.Infrastructure.csproj" />
+		<ProjectReference Include="..\Demo.ServiceDefaults\Demo.ServiceDefaults.csproj" />
+	</ItemGroup>
 </Project>
